# haptal-curate

./: .gitignore  CITATION.cff  README.md  app.py  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
examples/: basic_scoring.py  phase_gated_example.py  synthetic_demo.py
haptal_curate/: __init__.py  confounds.py  curator.py  loader.py  reporter.py  scorer.py  types.py
haptal_curate/metrics/: __init__.py  base.py  ensemble.py  entropy.py  gripper_timing.py  isolation_forest.py  knn.py  smoothness.py  trajectory_alignment.py
haptal_curate/phase/: __init__.py  phase_gated.py  segmenter.py
tests/: conftest.py  test_confounds.py  test_metrics.py  test_phase.py  test_pipeline.py
